refactor docker file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,8 @@
 # customize as per requirement
 services:
-  web:
-    build: .
-    container_name: django_app
-    command: bash scripts/run_prod.sh
-    env_file: .env
-    volumes:
-      - .:/code
-    depends_on:
-      - db
-      - redis
-    ports:
-      - "8000:80"
 
   db:
-    image: postgres:15
+    image: postgres:17
     container_name: postgres_db
     environment:
       POSTGRES_USER: ${DB_USER}
@@ -23,11 +11,38 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
+  
+  web:
+    build: .
+    container_name: django_app
+    # command: bash scripts/run_develop.sh
+    command: ["./scripts/wait-for-db.sh", "db", "bash scripts/run_develop.sh"]
+    env_file: .env
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+      - redis
+    ports:
+      - "8000:8000"
+
 
   redis:
     image: redis:7
     container_name: redis_cache
     restart: always
+  
+
+  celery:
+    build: .
+    container_name: celery_worker
+    command: celery -A config worker --loglevel=info
+    env_file: .env
+    volumes:
+      - .:/code
+    depends_on:
+      - web
+      - redis
 
 volumes:
   postgres_data:
