--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   web:
     build: .
     container_name: django_app
+    user: "django"
     # command: bash scripts/run_develop.sh
     command: ["./scripts/wait-for-db.sh", "db", "bash scripts/run_develop.sh"]
     env_file: .env
@@ -36,6 +37,7 @@ services:
   celery:
     build: .
     container_name: celery_worker
+    user: "django"
     command: celery -A config worker --loglevel=info
     env_file: .env
     volumes:
